--- a/www/index.html
+++ b/www/index.html
@@ -25,9 +25,10 @@
 
     <ion-pane>
       <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
+        <h1 class="title">Bike</h1>
       </ion-header-bar>
       <ion-content>
+        <button dark>Dark</button>
       </ion-content>
     </ion-pane>
   </body>
