--- a/www/index.html
+++ b/www/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+<html ng-app="bike">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <title></title>
 
-    <!-- stylesheets -->
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+  <!-- stylesheets -->
+  <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 
-    <!-- ionic/angular/cordova -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
-    <script src="cordova.js"></script>
+  <!-- ionic/angular/cordova -->
+  <script src="lib/ionic/js/ionic.bundle.js"></script>
+  <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+  <script src="cordova.js"></script>
 
-    <!-- js -->
-    <script src="js/app.js"></script>
-  </head>
-  <body ng-app="bike">
+  <!-- js -->
+  <script src="js/app.js"></script>
+</head>
+<body ng-controller="MainCtrl">
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
+  <ion-pane>
+    <ion-header-bar class="bar-stable">
+      <div class="bar bar-header bar-dark">
         <h1 class="title">Bike</h1>
-      </ion-header-bar>
-      <ion-content>
-        <button dark>Dark</button>
-      </ion-content>
-    </ion-pane>
-  </body>
+      </div>
+    </ion-header-bar>
+    <ion-content>
+      <button class="button button-large" ng-click="activate()">
+        On / Off
+      </button>
+    </ion-content>
+  </ion-pane>
+</body>
 </html>
