added angular charts and chart.js

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -6,6 +6,7 @@
   <title></title>
   <!-- stylesheets -->
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/angular-chart.min.css">
   <link href="css/style.css" rel="stylesheet">
 
   <!-- ionic/angular/cordova -->
@@ -16,6 +17,8 @@
   <script src="cordova.js"></script>
 
   <!-- js -->
+  <script src="js/Chart.bundle.min.js"></script>
+  <script src="js/angular-chart.min.js"></script>
   <script src="js/app.js"></script>
 </head>
 <body ng-controller="MainCtrl">
