updated routes in ionic

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -29,7 +29,7 @@
   <!-- angular controller -->
   <script src="js/controller.js"></script>
 </head>
-<body ng-controller="MainCtrl" ng-cloak="">
+<body ng-controller="MainCtrl" ng-cloak>
 
   <ion-pane>
     <div class="bar bar-header">
@@ -55,14 +55,6 @@
           </div>
         </button>
       </div>
-      <!-- <div>
-        <ul ng-repeat="location in geoData track by $index">
-          <li>index: {{[$index]}}</li>
-          <li>latitude: {{location.latitude}}</li>
-          <li>longitude: {{location.longitude}}</li>
-          <li>timestamp: {{location.timestamp}}</li>
-        </ul>
-      </div> -->
     </ion-content>
   </ion-pane>
 </body>
