instantiated bford-sockets in module - nothing else

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -10,12 +10,13 @@
   <link href="lib/angular-chart.js/dist/angular-chart.min.css">
   <link href="css/style.css" rel="stylesheet">
 
-  <!-- ionic/cordova/angular packages -->
+  <!-- packages -->
   <script src="lib/ionic/js/ionic.bundle.min.js"></script>
   <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
   <script src="cordova.js"></script>
   <script src="lib/Chart.js/Chart.js"></script>
   <script src="lib/angular-chart.js/dist/angular-chart.min.js"></script>
+  <script src="lib/angular-socket-io/socket.min.js"></script>
 
   <!-- angular module -->
   <script src="js/module.js"></script>
