--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -16,7 +16,7 @@
   <script src="cordova.js"></script>
   <script src="lib/Chart.js/Chart.js"></script>
   <script src="lib/angular-chart.js/dist/angular-chart.min.js"></script>
-  <script src="lib/angular-socket-io/socket.min.js"></script>
+  <!-- <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script> -->
 
   <!-- angular module -->
   <script src="js/module.js"></script>
@@ -30,7 +30,7 @@
   <!-- angular controller -->
   <script src="js/controller.js"></script>
 </head>
-<body ng-controller="MainCtrl" ng-cloak>
+<body ng-controller="MainCtrl" ng-cloak="">
 
   <ion-pane>
     <div class="bar bar-header">
