--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -49,6 +49,7 @@
         <h4> Avg. Mag-Jerk: {{magJerk}}</h4>
       </div>
       <div class="button-wrapper">
+        <button type="button" name="button" ng-click="test()">TESTING BUTTON</button>
         <button class="button button-large" ng-click="activate()">
           <div class="button-internal">
             <img src="img/bicycle.png" alt="bike">
