updated jerkmag algorithm

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -30,7 +30,7 @@
   <!-- angular controller -->
   <script src="js/controller.js"></script>
 </head>
-<body ng-controller="MainCtrl" ng-cloak>
+<body ng-controller="MainCtrl" ng-cloak="">
 
   <ion-pane>
     <div class="bar bar-header">
