--- a/client_server/public/index.html
+++ b/client_server/public/index.html
@@ -15,7 +15,7 @@
 </head>
 <body ng-controller="JerkCtrl">
   <header>
-    <h3>Jerk-less</h3>
+    <h3><span id="jerk">Jerk</span> maps</h3>
   </header>
   <div class="body-wrapper">
     <div id='map'></div>
