--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -33,7 +33,7 @@
 
   <ion-pane>
     <div class="bar bar-header">
-      <h1 class="title">Jerk<span id="less">Less</span></h1>
+      <h1 class="title"><span id="jerk">Jerk</span> Less</h1>
     </div>
     <ion-content>
       <div class="card">
