added custom fonts

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -9,6 +9,7 @@
   <!-- stylesheets -->
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
   <link href="lib/angular-chart.js/dist/angular-chart.min.css">
+  <link href="css/frenchy.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 
   <!-- ionic/cordova/angular packages -->
