added foundation for animation

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -55,6 +55,7 @@
             <p>{{status}}</p>
           </div>
         </button>
+        <div id="circle" class="stateOne"></div>
       </div>
     </ion-content>
   </ion-pane>
