implemented toggle on ionic

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -56,6 +56,9 @@
           </div>
         </button>
       </div>
+      <ion-toggle ng-model="mtnBike" ng-change="toggleMtnBike()" toggle-class="toggle-assertive">
+        Mountain Bike
+      </ion-toggle>
     </ion-content>
   </ion-pane>
 </body>
