successfully added mtn bike switch - colors are reassigned when true. also disabled scrolling

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -36,7 +36,7 @@
     <div class="bar bar-header">
       <h1 class="title"><span id="jerk">Jerk</span> Less</h1>
     </div>
-    <ion-content>
+    <ion-content scroll="false">
       <div class="card">
         <div class="item item-divider">
           Jerk Values
