added hidden settings option

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -35,6 +35,7 @@
   <ion-pane>
     <div class="bar bar-header">
       <h1 class="title"><span id="jerk">Jerk</span> Less</h1>
+      <img src="img/setting_cog.png" alt="settings cog" ng-click="toggleSetting()" class="cog">
     </div>
     <ion-content scroll="false">
       <div class="card">
@@ -57,9 +58,11 @@
         </button>
         <div id="circle" class="stateOne"></div>
       </div>
-      <ion-toggle ng-model="mtnBike" ng-change="toggleMtnBike()" toggle-class="toggle-assertive">
-        Mountain Bike
-      </ion-toggle>
+      <div id="setting" class="off">
+        <ion-toggle ng-model="mtnBike" ng-change="toggleMtnBike()" toggle-class="toggle-assertive">
+          Mountain Bike
+        </ion-toggle>
+      </div>
     </ion-content>
   </ion-pane>
 </body>
