added foursquare data

--- a/client_server/public/index.html
+++ b/client_server/public/index.html
@@ -16,6 +16,7 @@
 <body ng-controller="JerkCtrl">
   <header>
     <h3><span id="jerk">Jerk</span> maps</h3>
+    <img src="/images/beer.png" alt="beer glass" ng-click="beer()"/>
   </header>
   <div class="body-wrapper">
     <div id='map'></div>
