--- a/client_server/public/index.html
+++ b/client_server/public/index.html
@@ -11,6 +11,8 @@
   <!-- angular -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js" charset="utf-8"></script>
   <script src="/jerk_module.js" charset="utf-8" type="text/javascript"></script>
+  <script src="/route_factory.js" charset="utf-8" type="text/javascript"></script>
+  <script src="/marker_factory.js" charset="utf-8" type="text/javascript"></script>
   <script src="/jerk_controller.js" charset="utf-8" type="text/javascript"></script>
 </head>
 <body ng-controller="JerkCtrl">
